--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "[![Actions Status](https://github.com/vyacheslav-pv/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/vyacheslav-pv/frontend-project-11/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
