--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "i18next": "^23.2.11",
+    "on-change": "^4.0.2",
+    "yup": "^1.2.0"
   }
 }
