--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "i18next": "^23.2.11",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.2",
     "yup": "^1.2.0"
   }
