--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/vyacheslav-pv/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/vyacheslav-pv/frontend-project-11/actions)",
+  "description": "RSS-aggregator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
